--- a/src/scss/components/_alert.scss
+++ b/src/scss/components/_alert.scss
@@ -1,13 +1,16 @@
 .alert {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     padding: 20px 25px;
     border-radius: 10px;
     background-color: var(--accent-color);
-
     color: var(--bright-color);
     box-shadow: 0px 24px 48px var(--shadow-color);
+
+    @media screen and (max-width: $sm) {
+        padding: 15px 20px;
+    }
 
     &--bright {
         background-color: transparent;
@@ -36,12 +39,13 @@
 
     &__text {
         display: block;
-        max-width: 90%;
-        overflow: hidden;
+        max-width: 85%;
         opacity: 0.85;
         color: var(--bright-color);
         font-size: 1.8rem;
-        white-space: nowrap;
-        text-overflow: ellipsis;
+
+        @media screen and (max-width: $sm) {
+            font-size: 1.4rem;
+        }
     }
 }
