--- a/src/scss/components/_checkbox.scss
+++ b/src/scss/components/_checkbox.scss
@@ -24,6 +24,10 @@
         &:focus-visible + .checkbox__label {
             &::before {
                 outline: 2px solid var(--primary-color);
+
+                @media screen and (max-width: $md) {
+                    outline: none;
+                }
             }
         }
 
