--- a/src/scss/components/_radio.scss
+++ b/src/scss/components/_radio.scss
@@ -10,6 +10,10 @@
         &:focus-visible + .radio__label {
             &::before {
                 outline: 2px solid var(--primary-color);
+
+                @media screen and (max-width: $md) {
+                    outline: none;
+                }
             }
         }
 
