--- a/src/scss/components/_text-field.scss
+++ b/src/scss/components/_text-field.scss
@@ -39,6 +39,10 @@
 
         &:focus-visible {
             outline: 2px solid var(--accent-color);
+
+            @media screen and (max-width: $md) {
+                outline: none;
+            }
         }
 
         &:disabled {
