--- a/src/scss/blocks/_flaps-section.scss
+++ b/src/scss/blocks/_flaps-section.scss
@@ -1,23 +1,25 @@
 .flaps-section {
-    &__item {
-        margin-bottom: 60px;
+	&__item {
+		max-width: 1200px;
+		margin-bottom: 60px;
 
-        &:last-of-type {
-            margin-bottom: 0;
-        }
-    }
+		&:last-of-type {
+			margin-bottom: 0;
+		}
+	}
 
-    &__grid {
-        display: grid;
-        grid-template-columns: repeat(4, 260px);
-        gap: 40px 13px;
-        max-width: 1200px;
-        padding: 60px;
-        border-radius: 20px;
-        background-color: var(--bright-color);
+	&__grid {
+		display: grid;
+		grid-template-columns: repeat(auto-fill, 260px);
+		justify-content: center;
+		gap: 20px 13px;
+		max-width: 1200px;
+		padding: 60px;
+		border-radius: 20px;
+		background-color: var(--bright-color);
 
-        .flaps-section__item {
-            margin-bottom: 0;
-        }
-    }
+		.flaps-section__item {
+			margin-bottom: 0;
+		}
+	}
 }
