--- a/src/scss/components/_flap.scss
+++ b/src/scss/components/_flap.scss
@@ -1,102 +1,168 @@
+$flap-padding-lr: 40px;
+
 .flap {
-    max-width: 1200px;
-    padding: 75px 40px;
-    border-radius: 20px;
-    background: var(--bright-color) url("/images/flap-image.png") no-repeat 100%
-        0% / contain;
+	padding: 75px $flap-padding-lr;
+	border-radius: 20px;
+	background: var(--bright-color) url("/images/flap-image.png") no-repeat 100%
+		0% / contain;
 
-    &__content {
-        max-width: 600px;
-    }
+	@media screen and (max-width: $lg) {
+		display: flex;
+		padding: 45px 30px;
+		background: var(--bright-color);
+	}
 
-    &__label {
-        margin-bottom: 5px;
-        font-size: 1.6rem;
-    }
+	&__content {
+		max-width: calc(50% + 2 * $flap-padding-lr);
 
-    &__heading {
-        margin-bottom: 20px;
-    }
+		@media screen and (max-width: $lg) {
+			max-width: none;
+		}
+	}
 
-    &__text {
-        margin-bottom: 25px;
-        font-size: 2rem;
-        line-height: 2.8rem;
-    }
+	&__label {
+		margin-bottom: 5px;
+		font-size: 1.6rem;
+	}
 
-    &__image {
-        display: none;
-    }
+	&__heading {
+		margin-bottom: 20px;
 
-    &--right {
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-        justify-content: flex-end;
-        padding: 60px;
-        background: var(--bright-color);
+		@media screen and (max-width: $sm) {
+			font-size: 3.4rem;
+			line-height: 4.4rem;
+		}
+	}
 
-        .flap__content {
-            margin-left: 80px;
-        }
+	&__text {
+		margin-bottom: 25px;
+		font-size: 2rem;
+		line-height: 2.8rem;
 
-        .flap__label {
-            display: none;
-        }
+		@media screen and (max-width: $sm) {
+			font-size: 1.6rem;
+			line-height: 2.4rem;
+		}
+	}
 
-        .flap__image {
-            display: block;
-            width: 400px;
-            height: 400px;
-            border-radius: 16px;
-            object-fit: cover;
-            object-position: 100% 0%;
-        }
-    }
+	&__image {
+		display: none;
 
-    &--left {
-        @extend .flap--right;
-        flex-direction: row;
+		@media screen and (max-width: $lg) {
+			display: block;
+			width: 250px;
+			height: 250px;
+			margin-left: 60px;
+			border-radius: 16px;
+			object-fit: cover;
+			object-position: 100% 0%;
+		}
 
-        .flap__content {
-            margin-left: 0;
-            margin-right: 80px;
-        }
-    }
+		@media screen and (max-width: $md) {
+			display: none;
+		}
+	}
 
-    &--bullet {
-        display: flex;
-        align-items: center;
-        flex-direction: column-reverse;
-        max-width: 260px;
-        padding: 0;
-        background: transparent;
-        text-align: center;
+	&__action {
+		@media screen and (max-width: $sm) {
+			width: 100px;
+			padding: 8px 0;
+			font-size: 1.4rem;
+		}
+	}
 
-        .flap__label {
-            display: none;
-        }
+	&--right {
+		display: flex;
+		flex-direction: row-reverse;
+		align-items: center;
+		justify-content: flex-end;
+		padding: 60px;
+		background: var(--bright-color);
 
-        .flap__heading {
-            margin-bottom: 8px;
-        }
+		.flap__content {
+			margin-left: 80px;
 
-        .flap__text {
-            margin-bottom: 0;
-            font-size: 1.6rem;
-            line-height: 2.2rem;
-        }
+			@media screen and (max-width: $md) {
+				margin-left: 0;
+			}
+		}
 
-        .flap__action {
-            display: none;
-        }
+		.flap__label {
+			display: none;
+		}
 
-        .flap__image {
-            display: block;
-            width: 160px;
-            height: 160px;
-            margin-bottom: 17px;
-            border-radius: 50%;
-        }
-    }
+		.flap__image {
+			display: block;
+			width: 400px;
+			height: 400px;
+			margin: 0;
+			border-radius: 16px;
+			object-fit: cover;
+			object-position: 100% 0%;
+
+			@media screen and (max-width: $lg) {
+				width: 250px;
+				height: 250px;
+			}
+
+			@media screen and (max-width: $md) {
+				display: none;
+			}
+		}
+	}
+
+	&--left {
+		@extend .flap--right;
+		flex-direction: row;
+
+		.flap__content {
+			margin-left: 0;
+			margin-right: 80px;
+
+			@media screen and (max-width: $md) {
+				margin-right: 0;
+			}
+		}
+	}
+
+	&--bullet {
+		display: flex;
+		align-items: center;
+		flex-direction: column-reverse;
+		max-width: 260px;
+		padding: 20px;
+		background: transparent;
+		text-align: center;
+
+		@media screen and (max-width: $lg) {
+			padding: 20px;
+		}
+
+		.flap__label {
+			display: none;
+		}
+
+		.flap__heading {
+			margin-bottom: 8px;
+		}
+
+		.flap__text {
+			margin-bottom: 0;
+			font-size: 1.6rem;
+			line-height: 2.2rem;
+		}
+
+		.flap__action {
+			display: none;
+		}
+
+		.flap__image {
+			display: block;
+			width: 160px;
+			height: 160px;
+			margin: 0;
+			margin-bottom: 17px;
+			border-radius: 50%;
+		}
+	}
 }
