--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,47 +1,89 @@
 .header {
-    display: flex;
-    align-items: center;
-    padding: 16px;
-    border-radius: 8px;
-    background-color: var(--bright-color);
+	display: flex;
+	align-items: center;
+	height: 60px;
+	padding: 0 16px;
+	border-radius: 8px;
+	background-color: var(--bright-color);
 
-    &__logo-link {
-        display: block;
-        text-decoration: none;
-    }
+	&__logo-link {
+		display: block;
+		text-decoration: none;
+	}
 
-    &__menu {
-        margin-left: 60px;
-    }
+	&__navigation {
+		display: flex;
+		align-items: center;
+		width: 100%;
+		margin-left: 60px;
 
-    &__menu-link {
-        display: inline-block;
-        margin-right: 25px;
-        padding: 5px 0;
-        color: var(--primary-color);
-        font-size: 1.6rem;
-        text-decoration: none;
+		@media screen and (max-width: $md) {
+			display: none;
+		}
+	}
 
-        &:last-child {
-            margin-right: 0;
-        }
+	&__menu {
+		margin-right: auto;
+	}
 
-        &:hover,
-        &:focus-visible {
-            outline: none;
-            text-decoration: underline;
-        }
-    }
+	&__menu-link {
+		display: inline-block;
+		margin-right: 25px;
+		padding: 5px 0;
+		color: var(--primary-color);
+		font-size: 1.6rem;
+		text-decoration: none;
 
-    &__controls {
-        margin-left: auto;
-    }
+		&:last-child {
+			margin-right: 0;
+		}
 
-    &__control-button {
-        margin-right: 15px;
+		&:hover,
+		&:focus-visible {
+			outline: none;
+			text-decoration: underline;
+		}
+	}
 
-        &:last-child {
-            margin-right: 0;
-        }
-    }
+	&__controls {
+		margin-left: auto;
+	}
+
+	&__control-button {
+		margin-right: 15px;
+
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+
+	&__menu-button {
+		display: none;
+		border: none;
+		background-color: transparent;
+		color: var(--primary-color);
+		font-size: 1.6rem;
+		cursor: pointer;
+
+		@media screen and (max-width: $md) {
+			display: flex;
+			align-items: center;
+			margin-left: auto;
+		}
+	}
+
+	&__menu-icon {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		width: 20px;
+		height: 14px;
+		margin-right: 15px;
+
+		span {
+			height: 2px;
+			border-radius: 8px;
+			background-color: var(--primary-color);
+		}
+	}
 }
