--- a/src/scss/blocks/_callouts-section.scss
+++ b/src/scss/blocks/_callouts-section.scss
@@ -1,13 +1,14 @@
 .callouts-section {
-    &__item {
-        margin-bottom: 60px;
+	&__item {
+		max-width: 800px;
+		margin-bottom: 60px;
 
-        &:nth-child(3) {
-            margin-bottom: 40px;
-        }
+		&:nth-child(3) {
+			margin-bottom: 40px;
+		}
 
-        &:last-child {
-            margin-bottom: 0;
-        }
-    }
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
 }
