--- a/src/scss/components/_callout.scss
+++ b/src/scss/components/_callout.scss
@@ -1,52 +1,120 @@
 .callout {
-    width: 800px;
-    padding: 40px;
-    border-radius: 16px;
-    background-color: var(--bright-color);
+	position: relative;
+	padding: 40px;
+	border-radius: 16px;
+	background-color: var(--bright-color);
 
-    &__heading {
-        margin-bottom: 15px;
-        font-size: 4.4rem;
-    }
+	@media screen and (max-width: $md) {
+		padding: 20px;
+	}
 
-    &__text {
-        margin-bottom: 20px;
-        font-size: 2rem;
-        line-height: 2.8rem;
-    }
+	&__more {
+		position: absolute;
+		top: 16px;
+		right: 8px;
+		transform: translateY(25%);
+		display: none;
+	}
 
-    &__action-button {
-        margin-right: 15px;
+	&__heading {
+		margin-bottom: 15px;
+		font-size: 4.4rem;
 
-        &:last-child {
-            margin-right: 0;
-        }
-    }
+		@media screen and (max-width: $sm) {
+			font-size: 2.8rem;
+		}
+	}
 
-    &--dark {
-        background-color: var(--shade-color);
-    }
+	&__text {
+		margin-bottom: 20px;
+		font-size: 2rem;
+		line-height: 2.8rem;
 
-    &--micro {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 15px 20px;
+		@media screen and (max-width: $sm) {
+			font-size: 1.6rem;
+			line-height: 2.2rem;
+		}
+	}
 
-        .callout__heading {
-            display: none;
-        }
+	&__action-button {
+		margin-right: 15px;
 
-        .callout__text {
-            margin-bottom: 0;
-            padding-right: 30px;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-        }
+		@media screen and (max-width: $sm) {
+			width: 100px;
+			margin-right: 8px;
+			padding: 8px 6px;
+			font-size: 1.4rem;
+		}
 
-        .callout__actions {
-            display: flex;
-        }
-    }
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+
+	&--dark {
+		background-color: var(--shade-color);
+	}
+
+	&--micro {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 15px 20px;
+
+		.callout__more {
+			@media screen and (max-width: $md) {
+				display: block;
+			}
+		}
+
+		.callout__heading {
+			display: none;
+		}
+
+		.callout__text {
+			margin-bottom: 0;
+			padding-right: 30px;
+		}
+
+		.callout__actions {
+			display: flex;
+
+			@media screen and (max-width: $md) {
+				position: absolute;
+				top: 20px;
+				right: 40px;
+				z-index: 100;
+				flex-direction: column;
+				align-items: center;
+				width: fit-content;
+				padding: 16px;
+				border-radius: 8px;
+				background-color: var(--bright-color);
+				box-shadow: 0px 0px 8px var(--primary-transparent-color);
+				opacity: 0;
+				visibility: hidden;
+				transform: translateY(-10px);
+				transition: opacity 0.2s ease-in, transform 0.2s ease-in;
+
+				&--active {
+					visibility: visible;
+					opacity: 1;
+					transform: translateY(0);
+				}
+			}
+		}
+
+		.callout__action-button {
+			@media screen and (max-width: $md) {
+				width: 100px;
+				margin: 0 0 10px 0;
+				padding: 8px 6px;
+				font-size: 1.4rem;
+
+				&:last-child {
+					margin-bottom: 0;
+				}
+			}
+		}
+	}
 }
