--- a/src/scss/blocks/_cards-section.scss
+++ b/src/scss/blocks/_cards-section.scss
@@ -1,23 +1,33 @@
 .cards-section {
-    &__common {
-        display: flex;
-        margin-bottom: 60px;
-    }
+	&__common {
+		display: grid;
+		grid-template-columns: repeat(auto-fill, 300px);
+		gap: 60px;
+		margin-bottom: 60px;
 
-    &__common-item {
-        width: 300px;
-        margin-right: 60px;
+		@media screen and (max-width: $md) {
+			grid-template-columns: 1fr;
+		}
+	}
 
-        &:last-child {
-            align-self: flex-start;
-            margin-right: 0;
-        }
-    }
+	&__common-item {
+		&:nth-child(2) {
+			min-height: 430px;
+		}
 
-    &__solid {
-        display: grid;
-        grid-template-columns: repeat(3, 260px);
-        grid-auto-rows: 240px;
-        gap: 60px;
-    }
+		&:last-child {
+			align-self: flex-start;
+		}
+	}
+
+	&__solid {
+		display: grid;
+		grid-template-columns: repeat(auto-fill, 260px);
+		grid-auto-rows: 240px;
+		gap: 60px;
+
+		@media screen and (max-width: $md) {
+			grid-template-columns: 1fr;
+		}
+	}
 }
