--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,116 +1,143 @@
 .card {
-    position: relative;
-    padding: 16px 16px 30px 16px;
-    border-radius: 24px;
-    background-color: var(--bright-color);
+	position: relative;
+	padding: 16px 16px 30px 16px;
+	border-radius: 24px;
+	background-color: var(--bright-color);
 
-    &__more {
-        position: absolute;
-        top: 16px;
-        right: 8px;
-        display: none;
-    }
+	&__more {
+		position: absolute;
+		top: 16px;
+		right: 8px;
+		display: none;
+	}
 
-    &__image {
-        display: block;
-        width: 100%;
-        max-height: 200px;
-        margin-bottom: 20px;
-        border-radius: 16px;
-        object-fit: cover;
-    }
+	&__image {
+		display: block;
+		width: 100%;
+		max-height: 200px;
+		margin-bottom: 20px;
+		border-radius: 16px;
+		object-fit: cover;
+	}
 
-    &__label {
-        display: none;
-        margin-bottom: 3px;
-        color: var(--bright-transparent-color);
-        font-size: 1.4rem;
-        font-weight: 500;
-    }
+	&__label {
+		display: none;
+		margin-bottom: 3px;
+		color: var(--bright-transparent-color);
+		font-size: 1.4rem;
+		font-weight: 500;
+	}
 
-    &__heading {
-        margin-bottom: 10px;
-    }
+	&__heading {
+		margin-bottom: 10px;
+	}
 
-    &__text {
-        margin-bottom: 25px;
-    }
+	&__text {
+		margin-bottom: 25px;
+	}
 
-    &__action {
-        border: 1px solid var(--shade-color);
-        box-shadow: none;
-    }
+	&__action-button {
+		border: 1px solid var(--shade-color);
+		box-shadow: none;
 
-    &--menu {
-        .card__more {
-            display: block;
-        }
+		@media screen and (max-width: $sm) {
+			width: 100px;
+			padding: 8px 6px;
+			font-size: 1.4rem;
+		}
+	}
 
-        .card__action {
-            display: none;
-        }
-    }
+	&--menu {
+		.card__more {
+			display: block;
+		}
 
-    &--fill {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        background: var(--bright-color) url("/images/card-image.png") no-repeat
-            center / cover;
+		.card__actions {
+            position: absolute;
+			top: 20px;
+			right: 40px;
+			z-index: 100;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			width: fit-content;
+			padding: 16px;
+			border-radius: 8px;
+			background-color: var(--bright-color);
+			box-shadow: 0px 0px 8px var(--primary-transparent-color);
+			opacity: 0;
+			visibility: hidden;
+			transform: translateY(-10px);
+			transition: opacity 0.2s ease-in, transform 0.2s ease-in;
 
-        .card__image {
-            display: none;
-        }
+			&--active {
+				visibility: visible;
+				opacity: 1;
+				transform: translateY(0);
+			}
+		}
+	}
 
-        .card__heading {
-            color: var(--bright-color);
-        }
+	&--fill {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		background: var(--bright-color) url("/images/card-image.png") no-repeat
+			center / cover;
 
-        .card__text {
-            margin-bottom: 0;
-            color: var(--bright-color);
-        }
-    }
+		.card__image {
+			display: none;
+		}
 
-    &--text {
-        .card__image {
-            display: none;
-        }
-    }
+		.card__heading {
+			color: var(--bright-color);
+		}
 
-    &--labelled {
-        .card__label {
-            display: block;
-        }
-    }
+		.card__text {
+			margin-bottom: 0;
+			color: var(--bright-color);
+		}
+	}
 
-    &--solid-primary {
-        @extend .card--fill;
-        @extend .card--labelled;
-        background: var(--primary-color);
-    }
+	&--text {
+		.card__image {
+			display: none;
+		}
+	}
 
-    &--solid-accent {
-        @extend .card--fill;
-        @extend .card--labelled;
-        background: var(--accent-color);
-    }
+	&--labelled {
+		.card__label {
+			display: block;
+		}
+	}
 
-    &--solid-warning {
-        @extend .card--fill;
-        @extend .card--labelled;
-        background: var(--warning-color);
-    }
+	&--solid-primary {
+		@extend .card--fill;
+		@extend .card--labelled;
+		background: var(--primary-color);
+	}
 
-    &--solid-success {
-        @extend .card--fill;
-        @extend .card--labelled;
-        background: var(--success-color);
-    }
+	&--solid-accent {
+		@extend .card--fill;
+		@extend .card--labelled;
+		background: var(--accent-color);
+	}
 
-    &--solid-error {
-        @extend .card--fill;
-        @extend .card--labelled;
-        background: var(--error-color);
-    }
+	&--solid-warning {
+		@extend .card--fill;
+		@extend .card--labelled;
+		background: var(--warning-color);
+	}
+
+	&--solid-success {
+		@extend .card--fill;
+		@extend .card--labelled;
+		background: var(--success-color);
+	}
+
+	&--solid-error {
+		@extend .card--fill;
+		@extend .card--labelled;
+		background: var(--error-color);
+	}
 }
