--- a/src/scss/blocks/_colors-section.scss
+++ b/src/scss/blocks/_colors-section.scss
@@ -1,32 +1,32 @@
 .colors-section {
-    &__wrapper {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, 300px);
-        grid-auto-rows: 300px;
-        gap: 40px;
-        justify-content: center;
+	&__wrapper {
+		display: grid;
+		grid-template-columns: repeat(auto-fill, 300px);
+		grid-auto-rows: 300px;
+		gap: 40px;
+		justify-content: center;
 
-        @media screen and (max-width: $sm) {
-            grid-template-columns: repeat(auto-fill, 260px);
-            grid-auto-rows: 260px;
-        }
-    }
+		@media screen and (max-width: $sm) {
+			grid-template-columns: 1fr;
+			grid-auto-rows: 260px;
+		}
+	}
 
-    &__paper {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-    }
+	&__paper {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+	}
 
-    &__name {
-        opacity: 0.55;
-        font-size: 2rem;
-        font-weight: 700;
-    }
+	&__name {
+		opacity: 0.55;
+		font-size: 2rem;
+		font-weight: 700;
+	}
 
-    &__code {
-        margin-top: 10px;
-        font-size: 3.4rem;
-        font-weight: 700;
-    }
+	&__code {
+		margin-top: 10px;
+		font-size: 3.4rem;
+		font-weight: 700;
+	}
 }
