--- a/src/scss/blocks/_forms-section.scss
+++ b/src/scss/blocks/_forms-section.scss
@@ -1,23 +1,36 @@
 .forms-section {
-    &__wrapper {
-        display: grid;
-        grid-template-columns: repeat(2, 460px);
-        gap: 60px;
-    }
+	&__wrapper {
+		display: grid;
+		grid-template-columns: repeat(2, 460px);
+		gap: 60px;
 
-    &__contact {
-        grid-column: 1 / 3;
-        width: 720px;
-    }
+		@media screen and (max-width: $xl) {
+			grid-template-columns: repeat(auto-fill, minmax(460px, 1fr));
+		}
 
-    &__sign-in {
-        width: 460px;
-    }
+		@media screen and (max-width: $sm) {
+			grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+		}
+	}
 
-    &__sign-up {
-        grid-row: 2 / 4;
-        grid-column: 2 / 3;
-        width: 460px;
-        align-self: flex-start;
-    }
+	&__contact {
+		grid-column: 1 / 3;
+		width: 720px;
+
+		@media screen and (max-width: $xl) {
+			grid-column: unset;
+			width: auto;
+		}
+	}
+
+	&__sign-up {
+		grid-row: 2 / 4;
+		grid-column: 2 / 3;
+		align-self: flex-start;
+
+		@media screen and (max-width: $xl) {
+			grid-row: unset;
+			grid-column: unset;
+		}
+	}
 }
