--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,89 +1,159 @@
 .header {
-	display: flex;
-	align-items: center;
-	height: 60px;
-	padding: 0 16px;
-	border-radius: 8px;
-	background-color: var(--bright-color);
+    display: flex;
+    align-items: center;
+    height: 60px;
+    padding: 0 16px;
+    border-radius: 8px;
+    background-color: var(--bright-color);
 
-	&__logo-link {
-		display: block;
-		text-decoration: none;
-	}
+    &__logo-link {
+        display: block;
+        text-decoration: none;
+    }
 
-	&__navigation {
-		display: flex;
-		align-items: center;
-		width: 100%;
-		margin-left: 60px;
+    &__navigation {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        margin-left: 60px;
+        transition: left 0.4s ease-in-out;
 
-		@media screen and (max-width: $md) {
-			display: none;
-		}
-	}
+        @media screen and (max-width: $md) {
+            position: fixed;
+            top: 0;
+            left: -100vw;
+            z-index: 100;
+            flex-direction: column;
+            align-items: flex-start;
+            width: 100vw;
+            height: 100vh;
+            margin: 0;
+            padding: 60px 30px 30px 30px;
+            background-color: rgba(44, 39, 56, 0.95);
 
-	&__menu {
-		margin-right: auto;
-	}
+            &--active {
+                left: 0;
+            }
+        }
+    }
 
-	&__menu-link {
-		display: inline-block;
-		margin-right: 25px;
-		padding: 5px 0;
-		color: var(--primary-color);
-		font-size: 1.6rem;
-		text-decoration: none;
+    &__navigation-close {
+        display: none;
 
-		&:last-child {
-			margin-right: 0;
-		}
+        @media screen and (max-width: $md) {
+            position: absolute;
+            top: 30px;
+            right: 30px;
+            display: block;
+        }
+    }
 
-		&:hover,
-		&:focus-visible {
-			outline: none;
-			text-decoration: underline;
-		}
-	}
+    &__menu {
+        margin-right: auto;
 
-	&__controls {
-		margin-left: auto;
-	}
+        @media screen and (max-width: $md) {
+            display: flex;
+            flex-direction: column;
+            margin-right: 0;
+        }
+    }
 
-	&__control-button {
-		margin-right: 15px;
+    &__menu-link {
+        display: inline-block;
+        margin-right: 25px;
+        padding: 5px 0;
+        color: var(--primary-color);
+        font-size: 1.6rem;
+        text-decoration: none;
 
-		&:last-child {
-			margin-right: 0;
-		}
-	}
+        &:hover,
+        &:focus-visible {
+            outline: none;
+            text-decoration: underline;
+        }
 
-	&__menu-button {
-		display: none;
-		border: none;
-		background-color: transparent;
-		color: var(--primary-color);
-		font-size: 1.6rem;
-		cursor: pointer;
+        @media screen and (max-width: $md) {
+            margin-right: 0;
+            margin-bottom: 30px;
+            color: var(--bright-color);
+        }
 
-		@media screen and (max-width: $md) {
-			display: flex;
-			align-items: center;
-			margin-left: auto;
-		}
-	}
+        &:last-child {
+            margin: 0;
+        }
+    }
 
-	&__menu-icon {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		width: 20px;
-		height: 14px;
-		margin-right: 15px;
+    &__controls {
+        margin-left: auto;
 
-		span {
-			height: 2px;
-			border-radius: 8px;
-			background-color: var(--primary-color);
-		}
-	}
+        @media screen and (max-width: $md) {
+            display: flex;
+            flex-direction: column;
+            margin-left: 0;
+            margin-top: 50px;
+        }
+    }
+
+    &__control-button {
+        margin-right: 15px;
+
+        @media screen and (max-width: $md) {
+            margin-right: 0;
+            margin-bottom: 15px;
+        }
+
+        &:last-child {
+            margin: 0;
+        }
+    }
+
+    &__menu-button {
+        display: none;
+        border: none;
+        background-color: transparent;
+        color: var(--primary-color);
+        font-size: 1.6rem;
+        cursor: pointer;
+
+        &--active {
+            .header__menu-icon {
+                span {
+                    &:nth-child(1) {
+                        transform: rotate(45deg);
+                    }
+
+                    &:nth-child(2) {
+                        transform: scale(0) translateY(-50%);
+                    }
+
+                    &:nth-child(3) {
+                        transform: rotate(-45deg) translate(-3px);
+                    }
+                }
+            }
+        }
+
+        @media screen and (max-width: $md) {
+            display: flex;
+            align-items: center;
+            margin-left: auto;
+        }
+    }
+
+    &__menu-icon {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 20px;
+        height: 14px;
+        margin-right: 15px;
+
+        span {
+            height: 2px;
+            border-radius: 8px;
+            background-color: var(--primary-color);
+            transform-origin: 0 0;
+            transition: transform 0.2s ease-out;
+        }
+    }
 }
