--- a/src/scss/components/_chart.scss
+++ b/src/scss/components/_chart.scss
@@ -1,17 +1,25 @@
 .chart {
+	width: 100%;
+	overflow-x: auto;
+	border-radius: 24px;
+	background-color: var(--bright-color);
+
+	&__container {
+		min-width: 600px;
+	}
+
 	&__heading {
 		padding: 20px;
-		border-radius: 24px 24px 0 0;
 		background-color: #dae8ee;
 		color: var(--secondary-color);
 		font-size: 1.6rem;
 		font-weight: 500;
 	}
 
-	&__wrapper {
+	&__canvas-wrapper {
+		position: relative;
+		height: 500px;
 		padding: 0 20px 20px;
-		background-color: var(--bright-color);
-		border-radius: 0 0 24px 24px;
 	}
 
 	&__footer {
